# bangla-news-scraper

./: .gitignore  README.md  pyproject.toml
Bangladesh Protidin/: bangladeshProtidin.py
Jugantor/: jugantor.py  jugantor_articles.csv
Prothomalo/: data.csv  prothomalo.py
Samakal/: data.csv  samakal.py
bangla_news_scraper/: cli.py  config.py  date_utils.py  errors.py  http.py  models.py  normalizers.py
bangla_news_scraper/api/: app.py  schemas.py  security.py
bangla_news_scraper/api/routers/: jobs.py  sources.py
bangla_news_scraper/services/: csv_writer.py  jobs.py
bangla_news_scraper/sources/: bangladesh_pratidin.py  base.py  jsonld.py  jugantor.py  prothomalo.py  registry.py  samakal.py  sitemap.py
prothomalo/: data.csv  prothomalo.py
scripts/: smoke_api.py  smoke_sources.py
tests/: test_api.py  test_csv_writer.py  test_date_utils.py  test_models.py  test_normalizers.py  test_registry.py
